@@ -1,3 +1,9 @@
+Mon Feb 12 14:27:41 2001  Gary Wong  <gtw@research.att.com>
+
+	* gnubg.c (real_main): Implement the `-w' option again (it was
+	accidentally deleted in revision 1.74).  Do not install the SIGINT
+	handler if stdin is not a TTY.
+
 Thu Feb  8 16:10:10 2001  Gary Wong  <gtw@research.att.com>
 
 	* database.c (CommandDatabaseGenerate): Allow unlimited generation
